--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/loan-application-form.component.html
@@ -46,7 +46,7 @@
             <div class="col-12 py-2">
                 <h3 class="text-gray text-center ">
                     <b>
-                        Total Eligible Amount <span class="currency"> {{totalAmount | currency:'INR'}}</span> 
+                        Total Eligible Amount <span class="currency"> {{totalAmount | currency:'INR':'symbol' : '1.0-0'}}</span> 
                     </b>  
                 </h3>
             </div>
