--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/basic-details/basic-details.component.html
@@ -26,7 +26,7 @@
                     <label class="text-color kt-padding-l-10">Payment Type</label>
                 </div>
                 <div class="col-6">
-                    <select name="" id="" formControlName="paymentType" 
+                    <select class="form-control" formControlName="paymentType" 
                     [class.isError]="controls.paymentType.touched && controls.paymentType.invalid">
                         <option value="">Select Payment Type</option>
                         <option value="">Cash</option>
