--- a/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/applied-loan/applied-loan.component.scss
@@ -8,9 +8,9 @@
     .mat-column-date{
         flex: 0 0 8% !important;
     }
-    .mat-column-mobile{
-        flex: 0 0 8% !important;
-    }
+    // .mat-column-mobile{
+    //     flex: 0 0 8% !important;
+    // }
     .mat-column-fullName{
         padding-left: 0 !important;
         word-break: break-all !important;
@@ -21,7 +21,7 @@
         flex: 0 0 9% !important;
     }
     .mat-column-schemeName{
-        flex: 0 0 9% !important;
+        flex: 0 0 11% !important;
     }
     .mat-column-actions{
         flex:0 0 14% !important;
@@ -34,7 +34,7 @@
         flex: 0 0 12% !important;        
     }
     .mat-column-bMApproval{ 
-        flex: 0 0 8% !important;        
+        flex: 0 0 10% !important;        
     }
     .mat-column-view{ 
         flex: 0 0 5% !important;        
