--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-application-form/tabs/ornaments/ornaments.component.html
@@ -28,7 +28,23 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 ">
+                    <div class="col-6">
+                        <div class="row">
+                            <div class="col-4 form-label">
+                                <label class="text-color kt-padding-l-10">Quantity</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" class="form-control" placeholder="10" formControlName="quantity"
+                                    numbersOnly
+                                    [class.isError]="ornament.controls.quantity.touched && ornament.controls.quantity.invalid">
+                                <mat-error
+                                    *ngIf="ornament.controls.quantity.touched && ornament.controls.quantity.invalid">
+                                    <span *ngIf="ornament.controls.quantity.errors?.required">Field Required</span>
+                                </mat-error>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- <div class="col-6 ">
                         <div class="row kt-padding-l-10">
                             <div class="col-4 form-label">
                                 <label class="text-color ">Quantity</label>
@@ -43,7 +59,7 @@
                                 </mat-error>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="row justify-content-around">
 
@@ -56,7 +72,7 @@
                                 <input type="text" class="form-control" placeholder="12.02 gram"
                                     formControlName="grossWeight"
                                     [class.isError]="ornament.controls.grossWeight.touched && ornament.controls.grossWeight.invalid"
-                                    (blur)="calcGoldDeductionWeight(idx);weightCheck(idx)">
+                                    (blur)="weightCheck(idx);calcGoldDeductionWeight(idx)">
                                 <mat-error
                                     *ngIf="ornament.controls.grossWeight.touched && ornament.controls.grossWeight.invalid">
                                     <span *ngIf="ornament.controls.grossWeight.errors?.pattern">Enter a valid
@@ -68,37 +84,14 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="row kt-margin-t-15 kt-padding-l-10">
-                            <div class="col-4 form-label">
-                                <label class="text-color  ">Net wt.</label>
-                            </div>
-                            <div class="col-8">
-                                <input type="text" class="form-control" placeholder="10.20" formControlName="netWeight"
-                                    [class.isError]="ornament.controls.netWeight.touched && ornament.controls.netWeight.invalid"
-                                    (blur)="calcGoldDeductionWeight(idx);finalNetWeight(idx);weightCheck(idx)">
-                                <mat-error
-                                    *ngIf="ornament.controls.netWeight.touched && ornament.controls.netWeight.invalid">
-                                    <span *ngIf="ornament.controls.netWeight.errors?.pattern">Enter a valid
-                                        Number</span>
-                                    <span *ngIf="ornament.controls.netWeight.errors?.required">Field Required</span>
-                                    <span *ngIf="ornament.controls.netWeight.errors?.weight">
-                                        <small>Net  Weight should be lesser then Gross  Weight</small>
-                                    </span>
-                                </mat-error>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-
-                    <div class="col-6">
                         <div class="row kt-margin-t-15">
                             <div class="col-4 form-label">
-                                <label class="text-color ">Deduction Wt.</label>
+                                <label class="text-color kt-padding-l-10">Deduction Wt.</label>
                             </div>
                             <div class="col-8">
-                                <input type="text" class="form-control" [readonly]="true" placeholder="14.04"
+                                <input type="text" class="form-control" placeholder="14.04"
                                     formControlName="deductionWeight"
+                                    (blur)="weightCheck(idx);calcGoldDeductionWeight(idx)"
                                     [class.isError]="ornament.controls.deductionWeight.touched && ornament.controls.deductionWeight.invalid">
                                 <mat-error
                                     *ngIf="ornament.controls.deductionWeight.touched && ornament.controls.deductionWeight.invalid">
@@ -106,6 +99,32 @@
                                         Number</span>
                                     <span *ngIf="ornament.controls.deductionWeight.errors?.required">Field
                                         Required</span>
+                                    <span *ngIf="ornament.controls.deductionWeight.errors?.weight">
+                                        <small>Deduction Weight should be lesser then Gross Weight</small>
+                                    </span>
+                                </mat-error>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="row">
+
+                    <div class="col-6">
+                        <div class="row kt-margin-t-15 ">
+                            <div class="col-4 form-label">
+                                <label class="text-color  ">Net wt.</label>
+                            </div>
+                            <div class="col-8">
+                                <input type="text" class="form-control" [readonly]="true" placeholder="10.20"
+                                    formControlName="netWeight"
+                                    [class.isError]="ornament.controls.netWeight.touched && ornament.controls.netWeight.invalid">
+                                <mat-error
+                                    *ngIf="ornament.controls.netWeight.touched && ornament.controls.netWeight.invalid">
+                                    <span *ngIf="ornament.controls.netWeight.errors?.pattern">Enter a valid
+                                        Number</span>
+                                    <span *ngIf="ornament.controls.netWeight.errors?.required">Field Required</span>
+
                                 </mat-error>
                             </div>
                         </div>
@@ -262,13 +281,14 @@
                     <div class="col-6">
                         <div class="row kt-margin-t-15">
                             <div class="col-4 form-label">
-                                <label for="" class="text-color">Karat</label>
+                                <label for="" class="text-color my-auto">Karat</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="karat" (change)="selectKarat(idx)"
                                     [class.isError]="ornament.controls.karat.touched && ornament.controls.karat.invalid">
                                     <option value="" [disabled]="true" [selected]="true">Select Karat</option>
-                                    <option [value]="karat.karat" *ngFor="let karat of karatArr" [selected]="ornament.controls.karat.value == karat.karat">{{karat.karat}}
+                                    <option [value]="karat.karat" *ngFor="let karat of karatArr"
+                                        [selected]="ornament.controls.karat.value == karat.karat">{{karat.karat}}
                                     </option>
                                 </select>
                                 <mat-error *ngIf="ornament.controls.karat.touched && ornament.controls.karat.invalid">
@@ -277,73 +297,16 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 ">
-                        <div class="row kt-margin-t-15 kt-padding-l-10">
-                            <div class="col-4 form-label">
-                                <label for="" class="text-color">Purity %</label>
-                            </div>
-                            <div class="col-8">
-                                <input type="number" class="form-control" formControlName="purity" placeholder="00%"
-                                    (input)="finalNetWeight(idx);calculateLtvAmount(idx)"
-                                    [class.isError]="ornament.controls.purity.touched && ornament.controls.purity.invalid">
-                                <mat-error *ngIf="ornament.controls.purity.touched && ornament.controls.purity.invalid">
-                                    <span *ngIf="ornament.controls.purity.errors?.pattern">Enter a valid
-                                        Number</span>
-                                </mat-error>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-
                     <div class="col-6">
                         <div class="row kt-margin-t-15">
                             <div class="col-4 form-label">
-                                <label class="my-auto text-color ">Final Net Weight</label>
-                            </div>
-                            <div class="col-8">
-                                <input type="text" class="form-control" formControlName="finalNetWeight" readonly>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="row kt-margin-t-15 kt-padding-l-10">
-                            <div class="col-4 form-label">
-                                <label class="my-auto text-color ">LTV Range</label>
-                            </div>
-                            <div class="col-8">
-                                <input type="text" readonly
-                                    value="{{ornament.controls.ltvRange.value[0]}} - {{ornament.controls.ltvRange.value[ornament.controls.ltvRange.value.length-1]}}"
-                                    class="form-control">
-                            </div>
-                        </div>
-                    </div>
-                    
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="row kt-margin-t-15">
-                            <div class="col-4 form-label">
-                                <label class="text-color " style="position: relative; bottom: 6px;">Current LTV
-                                    Amt</label>
-                            </div>
-                            <div class="col-8">
-                                <input type="text" class="form-control" placeholder="100.00"
-                                    formControlName="currentLtvAmount" readonly>
-                                <mat-hint> <small> 75% of current gold rate</small></mat-hint>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="row kt-margin-t-15 kt-padding-l-10">
-                            <div class="col-4 form-label">
-                                <label class="my-auto text-color ">LTV %</label>
+                                <label class="my-auto text-color kt-padding-l-10">Purity %</label>
                             </div>
                             <div class="col-8">
                                 <select class="form-control" formControlName="ltvPercent"
                                     (change)="calculateLtvAmount(idx)"
                                     [class.isError]="ornament.controls.ltvPercent.touched && ornament.controls.ltvPercent.invalid">
-                                    <option value=null disabled selected>Select LTV %</option>
+                                    <option value=null disabled selected>Select Purity %</option>
                                     <option [value]="pure"
                                         *ngFor="let pure of ornament.controls.ltvRange.value;index as i">{{pure}} %
                                     </option>
@@ -356,14 +319,15 @@
                             </div>
                         </div>
                     </div>
-                    
 
                 </div>
                 <div class="row">
+
+
                     <div class="col-6">
                         <div class="row kt-margin-t-15 ">
                             <div class="col-4 form-label">
-                                <label class="text-color ">LTV Amount</label>
+                                <label class="text-color my-auto">LTV Amount</label>
                             </div>
                             <div class="col-8">
                                 <input type="text" class="form-control" placeholder="100.00" formControlName="ltvAmount"
@@ -377,11 +341,10 @@
                             </div>
                         </div>
                     </div>
-                    
                     <div class="col-6">
-                        <div class="row kt-margin-t-15 kt-padding-l-10">
+                        <div class="row kt-margin-t-15 ">
                             <div class="col-4 form-label">
-                                <label class="text-color ">Final LTV Amount</label>
+                                <label class="text-color my-auto kt-padding-l-10">Loan Amount</label>
                             </div>
                             <div class="col-8">
                                 <input type="text" class="form-control" placeholder="100.00"
@@ -389,7 +352,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="col-3 ">
