--- a/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-management/loan-calculator/tabs/rough-loan-amount/rough-loan-amount.component.html
@@ -18,34 +18,36 @@
                 </div>
                 <div class="row kt-margin-t-10">
                     <div class="col-4 form-label">
-                        <label for="" class="mandatory text-color">Gold Net Weight</label>
+                        <label for="" class="mandatory text-color">Deduction Weight</label>
                     </div>
                     <div class="col-6">
-                        <input type="number" class="form-control" formControlName="netWeight" placeholder="8.50 grams"
-                            [class.isError]="controls.netWeight.touched && controls.netWeight.invalid" (blur)="weightCheck();calcGoldDeductionWeight()">
-                        <mat-error *ngIf="controls.netWeight.errors?.required && controls.netWeight.touched">
+                        <input type="number" class="form-control" formControlName="deductionWeight"
+                            placeholder="2.00 grams" (blur)="weightCheck();calcGoldDeductionWeight()"
+                            [class.isError]="controls.deductionWeight.touched && controls.deductionWeight.invalid">
+                        <mat-error
+                            *ngIf="controls.deductionWeight.errors?.required && controls.deductionWeight.touched">
                             Required field
                         </mat-error>
-                        <mat-error *ngIf="controls.netWeight.errors?.weight && controls.netWeight.touched">
+                        <mat-error *ngIf="controls.deductionWeight.errors?.weight && controls.deductionWeight.touched">
                             <small>Net  Weight should be lesser then Gross  Weight</small>
                         </mat-error>
                     </div>
                 </div>
                 <div class="row kt-margin-t-10">
                     <div class="col-4 form-label">
-                        <label for="" class="mandatory text-color">Deduction Weight</label>
+                        <label for="" class="mandatory text-color">Gold Net Weight</label>
                     </div>
                     <div class="col-6">
-                        <input type="number" class="form-control" formControlName="deductionWeight"
-                            placeholder="2.00 grams"
-                            [class.isError]="controls.deductionWeight.touched && controls.deductionWeight.invalid">
-                        <mat-error
-                            *ngIf="controls.deductionWeight.errors?.required && controls.deductionWeight.touched">
+                        <input type="number" class="form-control" formControlName="netWeight" placeholder="8.50 grams"
+                            [class.isError]="controls.netWeight.touched && controls.netWeight.invalid" readonly>
+                        <mat-error *ngIf="controls.netWeight.errors?.required && controls.netWeight.touched">
                             Required field
                         </mat-error>
+                        
                     </div>
                 </div>
-                <div class="row kt-margin-t-10">
+               
+                <!-- <div class="row kt-margin-t-10">
                     <div class="col-4 form-label">
                         <label for="" class="mandatory text-color">Current LTV</label>
                     </div>
@@ -54,7 +56,7 @@
                             [class.isError]="controls.currentLTV.touched && controls.currentLTV.invalid" readonly>
                         <mat-hint><small>75% of current gold rate</small></mat-hint>
                     </div>
-                </div>
+                </div> -->
                 <div class="row kt-margin-t-30">
                     <div class="offset-4 col-6">
                         <kt-button [value]="'Calculate'" [type]="'button'" (click)="calculate()"></kt-button>
