--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -368,7 +368,7 @@ mat-header-row {
 ::ng-deep .mat-form-field-appearance-legacy .mat-form-field-underline {
 	background-color: transparent;
 }
-.ng-option{
+.ng-option {
 	line-height: 1 !important;
 }
 
@@ -515,7 +515,7 @@ mat-header-row {
 // 	border-color: #dc3545;
 // }
 
-.ng-select.ng-select-opened>.ng-select-container  {
+.ng-select.ng-select-opened > .ng-select-container {
 	background: #f2f3f7;
 }
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
@@ -539,13 +539,13 @@ mat-header-row {
 // image-action
 .pos-action {
 	position: absolute;
-	top     : 5px;
-	right   : 10px;
+	top: 5px;
+	right: 10px;
 }
 // action buttons
 .apply-kyc {
 	background: transparent;
-	border: thin solid #454D67;
+	border: thin solid #454d67;
 	border-radius: 5px;
 	padding: 5px;
 }
@@ -581,12 +581,18 @@ mat-header-row {
 
 // mat-form-field
 .mat-form-field-empty.mat-form-field-label {
-    color: gray !important;
+	color: gray !important;
 }
 .mat-form-field-underline {
-    background-color: gray !important;
+	background-color: gray !important;
 }
 
-.mat-input-element{
+.mat-input-element {
 	caret-color: black !important;
+}
+
+.image-text-truncate {
+	text-overflow: ellipsis;
+	white-space: nowrap;
+	overflow: hidden;
 }
