--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-list/refund-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-list/refund-details.component.html
@@ -181,7 +181,7 @@
                     </mat-cell>
                 </ng-container> -->
                 <ng-container matColumnDef="cancelOrder">
-                    <mat-header-cell *matHeaderCellDef>Cancel Order from</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef>Cancel Order From</mat-header-cell>
                     <mat-cell *matCellDef="let element">
                         {{element?.order?.orderBy?.broker?.merchant?.merchantName ? element?.order?.orderBy?.broker?.merchant?.merchantName : "-"}}
                     </mat-cell>
