--- a/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/order-management/refund-details/refund-details-view/refund-details-view.component.html
@@ -214,7 +214,7 @@
                     <div class="col-6 text-muted">Refund Status :</div>
                     <div class="col-6">{{
                         refundData?.refundStatus?.statusName
-                            ? refundData?.refundStatus?.statusName
+                            ? (refundData?.refundStatus?.statusName | titlecase)
                             : "-"
                     }}</div>
                 </div>
