--- a/gold-admin-frontend/src/app/views/pages/emi-management/product/upload-design/upload-design.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/product/upload-design/upload-design.component.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="col-8 offset-3 text-left">
                     <p class="font-weight-500">Design image parameters guideline for upload images:</p>
-                    <div>Size of image - Maximum 1 MB</div>
+                    <div>Size of image - Maximum 200 KB</div>
                     <p>Image dimensions - 1500 pixels x 1500 pixels</p>
                 </div>
 
