--- a/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/emi-management/bulk-upload-report/bulk-upload-report-list/bulk-upload-report-list.component.html
@@ -64,7 +64,7 @@
                 </ng-container>
                 <ng-container matColumnDef="status">
                     <mat-header-cell *matHeaderCellDef>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let report">{{report?.status}}</mat-cell>
+                    <mat-cell *matCellDef="let report">{{report?.status | titlecase}}</mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
