--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -52,6 +52,10 @@
 	width: 100% !important;
 }
 
+.mat-table__wrapper .mat-table {
+	max-height: 74vh !important;
+	overflow: auto;
+}
 .position-static {
 	position: static;
 }
