--- a/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
+++ b/gold-admin-frontend/src/app/views/pages/applied-kyc/applied-kyc.component.html
@@ -12,11 +12,6 @@
                     </mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="mobile">
-                    <mat-header-cell *matHeaderCellDef>Mobile No.</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.customer.mobileNumber}}</mat-cell>
-                </ng-container>
-
                 <ng-container matColumnDef="pan">
                     <mat-header-cell *matHeaderCellDef>PAN</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.customer.panCardNumber | uppercase}}</mat-cell>
@@ -44,14 +39,14 @@
                 <ng-container matColumnDef="kycStatus">
                     <mat-header-cell *matHeaderCellDef>KYC Status</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <span class="text-success" *ngIf="role.kycStatus == 'approved'">
-                            {{role.kycStatus | titlecase}}
+                        <span class="text-success" *ngIf="role.customer.kycStatus == 'approved'">
+                            {{role.customer.kycStatus | titlecase}}
                         </span>
-                        <span class="text-warning" *ngIf="role.kycStatus == 'pending'">
-                            {{role.kycStatus | titlecase}}
+                        <span class="text-warning" *ngIf="role.customer.kycStatus == 'pending'">
+                            {{role.customer.kycStatus | titlecase}}
                         </span>
-                        <span class="text-danger" *ngIf="role.kycStatus == 'rejected'">
-                            {{role.kycStatus | titlecase}}
+                        <span class="text-danger" *ngIf="role.customer.kycStatus == 'rejected'">
+                            {{role.customer.kycStatus | titlecase}}
                         </span>
                     </mat-cell>
                 </ng-container>
@@ -59,10 +54,11 @@
                 <ng-container matColumnDef="action">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let role">
-                        <div [ngStyle]="{'display': 'inherit'}" *ngxPermissionsOnly="['appliedKycEdit','customerClassificationEdit']">
+                        <div [ngStyle]="{'display': 'inherit'}"
+                            *ngxPermissionsOnly="['appliedKycEdit','customerClassificationEdit']">
                             <div class="kt-pointer" (click)="editKyc(role)" class="kt-pointer">
                                 <span
-                                    *ngIf="(userType == 6 && role.customerKycClassification.kycStatusFromCce == 'pending') || (userType == 5 && role.customerKycClassification.kycStatusFromCce == 'approved' && (role.kycStatus == 'rejected' || role.kycStatus == 'pending'))">
+                                    *ngIf="(userType == 6 && role.customerKycClassification.kycStatusFromCce == 'pending') || (userType == 5 && role.customerKycClassification.kycStatusFromCce == 'approved' && (role.customer.kycStatus == 'rejected' || role.customer.kycStatus == 'pending'))">
                                     <!-- <img src="../../../../assets/media/icons/action.svg"> -->
                                     <strong>Action ></strong>
                                 </span>
